--- a/src/4/how_to_flatten_a_nested_sequence/CMakeLists.txt
+++ b/src/4/how_to_flatten_a_nested_sequence/CMakeLists.txt
@@ -4,14 +4,14 @@ project(how_to_flatten_a_nested_sequence)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall std=c++17")
+set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
 
-add_executable(example example.cpp)
+add_executable(how_to_flatten_a_nested_sequence example.cpp)
 
 target_include_directories(
-	example PRIVATE
+	how_to_flatten_a_nested_sequence PRIVATE
 	${RANGE_INCLUDE_DIR})
 
 target_link_libraries(
-    example
+    how_to_flatten_a_nested_sequence
 	fmt)
