--- a/src/1/mapping_names_to_sequence_elements/CMakeLists.txt
+++ b/src/1/mapping_names_to_sequence_elements/CMakeLists.txt
@@ -4,7 +4,7 @@ project(mapping_names_to_sequence_elements)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(mapping_names_to_sequence_elements example.cpp)
 
