--- a/src/4/how_to_flatten_a_nested_sequence/CMakeLists.txt
+++ b/src/4/how_to_flatten_a_nested_sequence/CMakeLists.txt
@@ -4,7 +4,7 @@ project(how_to_flatten_a_nested_sequence)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../cmake/")
 include(all)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++17")
 
 add_executable(how_to_flatten_a_nested_sequence example.cpp)
 
